Configuracion final. Todo funciona.